--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,11 @@
    <com.example.driverdector.ColumnChart
        android:id="@+id/chart1"
        android:layout_width="match_parent"
-       android:layout_height="500dp" />
+       android:layout_height="300dp" />
+   <com.example.driverdector.BrokenLineChart
+       android:layout_marginTop="30dp"
+       android:layout_below="@id/chart1"
+       android:layout_width="match_parent"
+       android:layout_height="300dp"/>
 
 </RelativeLayout>
